# app/internal/models/available_virtual_bond.go
@@ -1,0 +1,6 @@
+package models
+
+type AvailableVirtualBond struct {
+	VirtualBondId string `json:"virtual_bond_id"`
+	VirtualBond   string `json:"virtual_bond"`
+}
